# aya_app

./: google-services.json  package-lock.json  package.json  vite.config.ts
src/: app.tsx  index.css  main.tsx  medicition_tracker.tsx  schadule.ts  schadule.tsx  schedule.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: init_the_database.rs  lib.rs
src-tauri/migration/src/entities/: mod.rs  records.rs
src-tauri/migration/src/entities/area/: mod.rs
src-tauri/migration/src/entities/event/: mod.rs
src-tauri/src/: main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/commands/: mod.rs  oauth.rs
src-tauri/src/app/commands/areas/: mod.rs
src-tauri/src/app/commands/events/: mod.rs  objects.rs
src-tauri/src/app/commands/oauth/: mod.rs
src-tauri/src/app/commands/records/: functions.rs  mod.rs  objects.rs
src-tauri/src/app/commands/records/functions/: create.rs  delete.rs  retrivie.rs  update.rs
src-tauri/src/firebase/: mod.rs
src/components/BoxSelect/: index.tsx
src/components/Button/: Button.tsx
src/components/Dialog/: index.tsx
src/components/Header/: index.tsx
src/components/Input/: index.tsx
src/components/Navbar/: index.tsx
src/components/aside/: index.tsx
src/components/checkbox/: index.tsx
src/components/collapsible_section/: index.tsx
src/components/data_input/: index.tsx
src/context/: index.ts
src/lib/: detector.ts  ocr.ts  types.ts
src/router/: index.tsx
src/routers/: index.tsx
src/screens/: Dashboard.tsx
(+29 files in other folders)
